--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>au.com.acegi</groupId>
+    <artifactId>acegi-standard-project</artifactId>
+    <version>0.0.2</version>
+  </parent>
   <groupId>org.lmdbjava</groupId>
   <artifactId>lmdbjava</artifactId>
   <version>0.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>LmdbJava</name>
   <description>Low latency Java API for the ultra-fast, embedded Symas Lightning Database (LMDB)</description>
-  <url>https://github.com/${github.org}/${project.artifactId}</url>
+  <inceptionYear>2016</inceptionYear>
   <organization>
     <name>The LmdbJava Open Source Project</name>
     <url>https://github.com/${github.org}</url>
   </organization>
-  <inceptionYear>2016</inceptionYear>
-  <scm>
-    <connection>scm:git:git@github.com:${github.org}/${project.artifactId}.git</connection>
-    <developerConnection>scm:git:git@github.com:${github.org}/${project.artifactId}.git</developerConnection>
-    <url>git@github.com:${github.org}/${project.artifactId}.git</url>
-    <tag>HEAD</tag>
-  </scm>
-  <issueManagement>
-    <system>GitHub Issues</system>
-    <url>https://github.com/${github.org}/${project.artifactId}/issues</url>
-  </issueManagement>
-  <ciManagement>
-    <system>travis-ci</system>
-    <url>https://travis-ci.org/${github.org}/${project.artifactId}</url>
-  </ciManagement>
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
@@ -51,20 +41,30 @@
       <timezone>+10</timezone>
     </developer>
   </developers>
+  <scm>
+    <connection>scm:git:git@github.com:${github.org}/${github.repo}.git</connection>
+    <developerConnection>scm:git:git@github.com:${github.org}/${github.repo}.git</developerConnection>
+    <url>git@github.com:${github.org}/${github.repo}.git</url>
+    <tag>HEAD</tag>
+  </scm>
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
-    <github.global.server>github</github.global.server>
     <github.org>lmdbjava</github.org>
-    <bintray.org>lmdbjava</bintray.org>
+    <github.repo>lmdbjava</github.repo>
     <license.licenseName>apache_v2</license.licenseName>
-    <checkstyle.config.location>${project.basedir}/src/main/config/checkstyle.xml</checkstyle.config.location>
-    <maven.version.rules>file://${basedir}/src/main/config/rule-set-ver.xml</maven.version.rules>
-    <pmd.ruleset>${project.basedir}/src/main/config/rule-set-pmd.xml</pmd.ruleset>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-library</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-ffi</artifactId>
@@ -93,24 +93,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-library</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.lmdbjava</groupId>
       <artifactId>lmdbjava-native-linux-x86_64</artifactId>
       <version>0.9.18-3</version>
@@ -131,6 +113,49 @@
   </dependencies>
   <build>
     <plugins>
+      <plugin>
+        <artifactId>maven-enforcer-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <configuration>
+          <usedDependencies>
+            <usedDependency>org.lmdbjava:lmdbjava-native-linux-x86_64</usedDependency>
+            <usedDependency>org.lmdbjava:lmdbjava-native-windows-x86_64</usedDependency>
+            <usedDependency>org.lmdbjava:lmdbjava-native-osx-x86_64</usedDependency>
+          </usedDependencies>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-pmd-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.basepom.maven</groupId>
+        <artifactId>duplicate-finder-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>au.com.acegi</groupId>
+        <artifactId>xml-format-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+      </plugin>
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
         <version>2.4.3</version>
@@ -153,324 +178,6 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.7.201606060606</version>
-        <executions>
-          <execution>
-            <id>config-jacoco-prepare-agent</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>config-jacoco-report</id>
-            <goals>
-              <goal>report</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>jacoco-check</id>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <rule>
-                  <limits>
-                    <limit>
-                      <counter>LINE</counter>
-                      <minimum>0.95</minimum>
-                    </limit>
-                  </limits>
-                </rule>
-              </rules>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>3.0.1</version>
-        <executions>
-          <execution>
-            <id>config-source</id>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.4</version>
-        <executions>
-          <execution>
-            <id>config-javadoc</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-site-plugin</artifactId>
-        <version>3.5.1</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>3.0.1</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>3.0.0</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-install-plugin</artifactId>
-        <version>2.5.2</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.10</version>
-        <executions>
-          <execution>
-            <id>config-dependency</id>
-            <goals>
-              <goal>analyze-only</goal>
-            </goals>
-            <configuration>
-              <failOnWarning>true</failOnWarning>
-              <usedDependencies>
-                <usedDependency>org.lmdbjava:lmdbjava-native-linux-x86_64</usedDependency>
-                <usedDependency>org.lmdbjava:lmdbjava-native-windows-x86_64</usedDependency>
-                <usedDependency>org.lmdbjava:lmdbjava-native-osx-x86_64</usedDependency>
-              </usedDependencies>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>1.4.1</version>
-        <executions>
-          <execution>
-            <id>config-enforcer</id>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <banDistributionManagement/>
-                <dependencyConvergence/>
-                <requireJavaVersion>
-                  <version>[${maven.compiler.source},)</version>
-                </requireJavaVersion>
-                <requireNoRepositories/>
-                <requirePluginVersions/>
-                <requireReleaseDeps/>
-                <requireUpperBoundDeps/>
-              </rules>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>au.com.acegi</groupId>
-        <artifactId>xml-format-maven-plugin</artifactId>
-        <version>3.0.2</version>
-        <executions>
-          <execution>
-            <id>config-xml-format</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>xml-format</goal>
-            </goals>
-            <configuration>
-              <indentSize>2</indentSize>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>license-maven-plugin</artifactId>
-        <version>1.9</version>
-        <executions>
-          <execution>
-            <id>config-license-update</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>update-project-license</goal>
-              <goal>add-third-party</goal>
-            </goals>
-            <configuration>
-              <generateBundle>true</generateBundle>
-              <failIfWarning>true</failIfWarning>
-            </configuration>
-          </execution>
-          <execution>
-            <id>config-license-file-header</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>update-file-header</goal>
-            </goals>
-            <configuration>
-              <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
-              <canUpdateCopyright>true</canUpdateCopyright>
-              <canUpdateDescription>true</canUpdateDescription>
-              <canUpdateLicense>true</canUpdateLicense>
-              <emptyLineAfterHeader>true</emptyLineAfterHeader>
-              <failIfWarning>true</failIfWarning>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.17</version>
-        <executions>
-          <execution>
-            <id>config-checkstyle</id>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <configuration>
-              <consoleOutput>true</consoleOutput>
-              <failsOnError>true</failsOnError>
-              <includeTestSourceDirectory>true</includeTestSourceDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-pmd-plugin</artifactId>
-        <version>3.6</version>
-        <executions>
-          <execution>
-            <id>config-pmd</id>
-            <goals>
-              <goal>check</goal>
-              <goal>cpd-check</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <printFailingErrors>true</printFailingErrors>
-          <includeTests>true</includeTests>
-          <rulesets>
-            <ruleset>${pmd.ruleset}</ruleset>
-          </rulesets>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <version>3.0.4</version>
-        <executions>
-          <execution>
-            <id>config-findbugs</id>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <configuration>
-              <failOnError>true</failOnError>
-              <includeTests>true</includeTests>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.basepom.maven</groupId>
-        <artifactId>duplicate-finder-maven-plugin</artifactId>
-        <version>1.2.1</version>
-        <executions>
-          <execution>
-            <id>config-duplicate-finder</id>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <configuration>
-              <printEqualFiles>true</printEqualFiles>
-              <failBuildInCaseOfDifferentContentConflict>true</failBuildInCaseOfDifferentContentConflict>
-              <failBuildInCaseOfEqualContentConflict>true</failBuildInCaseOfEqualContentConflict>
-              <failBuildInCaseOfConflict>true</failBuildInCaseOfConflict>
-              <ignoredResourcePatterns>
-                <ignoredResourcePattern>LICENSE.TXT</ignoredResourcePattern>
-                <ignoredResourcePattern>THIRD-PARTY.TXT</ignoredResourcePattern>
-                <ignoredResourcePattern>.netbeans_automatic_build</ignoredResourcePattern>
-              </ignoredResourcePatterns>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>versions-maven-plugin</artifactId>
-        <version>2.2</version>
-        <executions>
-          <execution>
-            <id>config-versions</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>display-plugin-updates</goal>
-              <goal>display-parent-updates</goal>
-              <goal>display-property-updates</goal>
-              <goal>display-dependency-updates</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>release</id>
-      <distributionManagement>
-        <repository>
-          <id>bintray-dist-maven</id>
-          <name>bintray-dist-maven</name>
-          <url>https://api.bintray.com/maven/${bintray.org}/maven/${project.groupId}:${project.artifactId}/;publish=1</url>
-        </repository>
-      </distributionManagement>
-    </profile>
-    <profile>
-      <id>travis</id>
-      <activation>
-        <property>
-          <name>env.TRAVIS</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.eluder.coveralls</groupId>
-            <artifactId>coveralls-maven-plugin</artifactId>
-            <version>4.2.0</version>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
