Enable CheckStyle on AppVeyor
Reverses 1756c0285c12f18edd50980fef18239dbe7a735d now that
acegi-standard-project 0.0.3 is in use.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ install:
   - pip install codecov
 
 build_script:
-  - mvn -V -B -Dcheckstyle.skip=true -e verify
+  - mvn -V -B -e verify
   - codecov -X gcov -f target/site/jacoco/jacoco.xml
 
 notifications:
