Travis to deploy snapshots

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ script:
   - mvn -B -Pdeploy -Dgpg.skip=true verify
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-  - if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_TAG" != "" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then echo $GPG_KEY | base64 --decode | gpg --batch --fast-import -; fi
-  - if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_TAG" != "" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then mvn -B -Pdeploy --settings .travis-settings.xml deploy; fi
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_TAG" == "" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then echo $GPG_KEY | base64 --decode | gpg --batch --fast-import -; fi
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_TAG" == "" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then mvn -B -Pdeploy --settings .travis-settings.xml deploy; fi
