CI servers to use .travis-settings.xml config

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ notifications:
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export JAVA_HOME=$(/usr/libexec/java_home); fi
 install:
-  - mvn -B -Pdeploy -V dependency:go-offline
+  - mvn -B -Pdeploy --settings .travis-settings.xml -V dependency:go-offline
 script:
-  - mvn -B -Pdeploy -Dgpg.skip=true verify
+  - mvn -B -Pdeploy --settings .travis-settings.xml -Dgpg.skip=true verify
 after_success:
   - bash <(curl -s https://codecov.io/bash)
   - if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_TAG" == "" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then echo $GPG_KEY | base64 --decode | gpg --batch --fast-import -; fi
