--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-buffer</artifactId>
+      <artifactId>netty-all</artifactId>
       <version>4.1.6.Final</version>
       <scope>test</scope>
     </dependency>
