Reduce scope for byteutils (discovered in #46)

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
       <groupId>com.jakewharton.byteunits</groupId>
       <artifactId>byteunits</artifactId>
       <version>0.9.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.agrona</groupId>
