--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,8 @@
     </dependency>
     <dependency>
       <groupId>org.agrona</groupId>
-      <artifactId>Agrona</artifactId>
-      <version>0.9.1</version>
+      <artifactId>agrona</artifactId>
+      <version>0.9.3</version>
       <optional>true</optional>
     </dependency>
     <dependency>
