Enable maven-jdeps-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,10 @@
         <artifactId>maven-checkstyle-plugin</artifactId>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jdeps-plugin</artifactId>
+      </plugin>
+      <plugin>
         <artifactId>maven-pmd-plugin</artifactId>
       </plugin>
       <plugin>
