Test Travis using Docker container (sudo: false)

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache:
 matrix:
   include:
   - os: linux
-    sudo: required
+    sudo: false
     dist: trusty
     language: java
     jdk: oraclejdk8
