--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ cache:
 matrix:
   include:
   - os: linux
+    dist: xenial
     language: java
-    jdk: oraclejdk8
+    jdk: openjdk11
   - os: osx
     language: java
-    osx_image: xcode9.2
+    osx_image: xcode10.1
 notifications:
   email:
     - ben.alex@acegi.com.au
