--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,11 @@
 version: '{build}'
 
+image: Visual Studio 2017
+
 clone_depth: 50
 
 environment:
+  JAVA_HOME: "C:\\Program Files\\Java\\jdk11"
   MVN_VER: 3.6.0
   PYTHON: "C:\\Python35"
 
