--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ install:
   - pip install codecov
 
 build_script:
-  - mvn -V -B --settings .travis-settings.xml -e verify
+  - mvn -V -B -Dcheckstyle.skip=true --settings .travis-settings.xml -e verify
   - codecov -X gcov -f target/site/jacoco/jacoco.xml
 
 notifications:
