Use explicit Netty JARs to mitigate dependency:go-offline failures
While https://netty.io/downloads.html states to use netty-all for
4.0.0 and above releases, both Travis and local development
environments successfully reproduce missing native artifacts. Given
Netty support is only for buffer testing purposes in LmdbJava, it's
easier to simply depend on the minimal Netty JARs that we
require. This also significantly speeds up builds when the .m2 cache
has been invalidated, as numerous unnecessary Netty components are no
longer downloaded.

--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,13 @@
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
+      <artifactId>netty-buffer</artifactId>
+      <version>4.1.48.Final</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-common</artifactId>
       <version>4.1.48.Final</version>
       <scope>test</scope>
     </dependency>
@@ -164,6 +170,7 @@
           </usedDependencies>
           <ignoredDependencies>
             <ignoredDependency>com.github.jnr:jffi</ignoredDependency>
+            <ignoredDependency>io.netty:netty-common</ignoredDependency>
           </ignoredDependencies>
         </configuration>
       </plugin>
