Migrate from Travis and AppVeyor to GitHub Actions

--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,8 @@
     <url>https://github.com/${github.org}/${github.repo}/issues</url>
   </issueManagement>
   <ciManagement>
-    <system>travis-ci</system>
-    <url>https://travis-ci.org/${github.org}/${github.repo}</url>
+    <system>GitHub Actions</system>
+    <url>https://github.com/${github.org}/${github.repo}/actions</url>
   </ciManagement>
   <properties>
     <github.org>lmdbjava</github.org>
