--- a/pom.xml
+++ b/pom.xml
@@ -135,19 +135,19 @@
     <dependency>
       <groupId>org.lmdbjava</groupId>
       <artifactId>lmdbjava-native-linux-x86_64</artifactId>
-      <version>0.9.24-1-SNAPSHOT</version>
+      <version>0.9.24-1</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.lmdbjava</groupId>
       <artifactId>lmdbjava-native-windows-x86_64</artifactId>
-      <version>0.9.24-1-SNAPSHOT</version>
+      <version>0.9.24-1</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.lmdbjava</groupId>
       <artifactId>lmdbjava-native-osx-x86_64</artifactId>
-      <version>0.9.24-1-SNAPSHOT</version>
+      <version>0.9.24-1</version>
       <optional>true</optional>
     </dependency>
     <dependency>
