--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -109,3 +109,4 @@ jobs:
         gpg_passphrase: ${{ secrets.gpg_passphrase }}
         nexus_username: ${{ secrets.nexus_username }}
         nexus_password: ${{ secrets.nexus_password }}
+        maven_profiles: ossrh-deploy
