Revert "Use explicit Netty JARs to mitigate dependency:go-offline failures"
This reverts commit 248878a53d3c6ba6f4f750d3997fa22d62df5714.

With the move to GitHub Actions we no longer use mvn
dependency:go-offline. As such the issue with the missing native
dependency should be avoided.

--- a/pom.xml
+++ b/pom.xml
@@ -110,13 +110,7 @@
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-buffer</artifactId>
-      <version>4.1.48.Final</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-common</artifactId>
+      <artifactId>netty-all</artifactId>
       <version>4.1.48.Final</version>
       <scope>test</scope>
     </dependency>
@@ -170,7 +164,6 @@
           </usedDependencies>
           <ignoredDependencies>
             <ignoredDependency>com.github.jnr:jffi</ignoredDependency>
-            <ignoredDependency>io.netty:netty-common</ignoredDependency>
           </ignoredDependencies>
         </configuration>
       </plugin>
