Promote Netty support from test to main (resolves #152)

--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
       <version>4.1.49.Final</version>
-      <scope>test</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
